# business_rules_reasoning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
base/: __init__.py  knowledge_base.py  operators.py  predicate.py  reasoning_process.py  rule.py  variable.py
base/operators/: __init__.py  between.py  equal.py  greater_or_equal.py  greater_than.py  is_in.py  less_or_equal.py  less_than.py  not_between.py  not_equal.py  not_in.py  not_subset.py  subset.py
base/value_types/: base_type.py
deductive/: __init__.py  deductive_predicate.py  reasoning_service.py
examples/: huggingface_orchestrator_example.py  huggingface_orchestrator_hypothesis_testing_example.py  knowledge_builder_example.py  leasing_document_processing_example.py
graphs/: dependency_overview.md
model_evaluation/: evaluation_databricks_mlflow.py  evaluation_datasets.py  evaluation_prompt_results.py  init_decision_tables.sql  init_test_datasets.sql
src/base/: operator_enums.py  rule.py
src/business_rules_reasoning/: __init__.py  json_deserializer.py  json_serializer.py
src/deductive/: deductive_predicate.py  reasoning_service.py
test/: __init__.py  test_json_deserializer.py  test_json_serializer.py
test/base/: __init__.py  test_knowledge_base.py  test_operators.py  test_reasoning_process.py  test_variable.py
test/deductive/: test_reasoning_service.py  test_rule.py
test/orchestrator_tests/: test_base_orchestrator.py  test_huggingface_orchestrator.py  test_llm_orchestrator.py  test_merge_kwargs.py  test_retry.py
(+57 files in other folders)
