[project]
name = "business_rules_reasoning"
version = "0.1.0"
authors = [{ name="Lukasz Wardzala <https://github.com/lwardzala>" }]
description = "A library for defining and evaluating business rules using various reasoning methods."
keywords = ["reasoning", "business rules", "infernce engine", "logic", "horn's inference"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lwardzala/business_rules_reasoning"
Issues = "https://github.com/lwardzala/business_rules_reasoning/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"